# sre-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .typos.toml  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.prompt_server  LICENSE  Makefile  README.md  build_push_docker.sh  compose.aws.yaml  compose.baremetal.yaml  compose.ecr.yaml  compose.gar.yaml  compose.gcp.yaml  compose.tests.yaml  compose.yaml  credential_setup.py  pyproject.toml  setup_credentials.py
.github/: pull_request_template.md
.github/workflows/: build-push-images.yml  ci-macos.yml  ci.yml  poetry-update.yml  pre-commit-autoupdate.yml
An SRE agent that can monitor application and infrastructure logs, diagnose issues, and report on diagnostics/: __init__.py
charts/sre-agent/: Chart.yaml  values-secrets.yaml.example  values.yaml
charts/sre-agent/charts/llm-server/: Chart.yaml
charts/sre-agent/charts/llm-server/templates/: deployment.tpl  service.tpl
charts/sre-agent/charts/mcp-github/: Chart.yaml
charts/sre-agent/charts/mcp-github/templates/: deployment.tpl  service.tpl
charts/sre-agent/charts/mcp-kubernetes/: Chart.yaml
charts/sre-agent/charts/mcp-kubernetes/templates/: deployment.tpl  service-account.tpl  service.tpl
charts/sre-agent/charts/mcp-slack/: Chart.yaml
charts/sre-agent/charts/mcp-slack/templates/: deployment.tpl  service.tpl
charts/sre-agent/charts/orchestrator/: Chart.yaml
charts/sre-agent/charts/orchestrator/templates/: deployment.tpl  service.tpl
charts/sre-agent/charts/prompt-server/: Chart.yaml
charts/sre-agent/charts/prompt-server/templates/: deployment.tpl  service.tpl
charts/sre-agent/templates/: secret.tpl
docs/: agent-architecture.md  creating-an-iam-role.md  credentials.md  ecr-setup.md  gar-setup.md  kubernetes-deployment.md  production-journey.md  security-testing.md
k8s/: apply_manifests.sh  llm-server.yaml  mcp-github.yaml  mcp-kubernetes.yaml  mcp-prompt-server.yaml  mcp-slack.yaml  namespace.yaml  sre-orchestrator.yaml
scripts/: kubeconfig-helper.sh  scale_eks_agent.sh  scale_eks_target.sh  setup_aws_credentials.sh  setup_gcp_credentials.sh
sre_agent/: client.py  tsconfig.json
sre_agent/client/: Dockerfile  __init__.py  client.py  pyproject.toml  startup.sh
sre_agent/client/utils/: auth.py  firewall.py  logger.py  schemas.py
sre_agent/firewall/: Dockerfile  __init__.py  firewall.py  pyproject.toml  startup.sh
sre_agent/llm/: Dockerfile  main.py  pyproject.toml
sre_agent/llm/utils/: adapters.py  clients.py  schemas.py
sre_agent/servers/: README.md
sre_agent/servers/github/: Dockerfile  README.md  index.ts  package.json
sre_agent/servers/github/common/: types.ts
sre_agent/servers/github/operations/: pulls.ts
sre_agent/servers/github/utils/: logger.ts
sre_agent/servers/mcp-server-kubernetes/: ADVANCED_README.md  Dockerfile  README.md  package.json  startup.sh
sre_agent/servers/mcp-server-kubernetes/.github/workflows/: cd.yml
sre_agent/servers/mcp-server-kubernetes/src/: index.ts
sre_agent/servers/mcp-server-kubernetes/src/models/: response-schemas.ts
sre_agent/servers/mcp-server-kubernetes/src/tools/: create_configmap.ts  create_cronjob.ts  create_pod.ts  create_service.ts  delete_cronjob.ts  delete_service.ts  describe_service.ts  list_contexts.ts  list_cronjobs.ts  scale_deployment.ts  update_deployment.ts  update_service.ts
sre_agent/servers/mcp-server-kubernetes/src/utils/: kubernetes-manager.ts  logger.ts  sse.ts
sre_agent/servers/mcp-server-kubernetes/tests/: configmap.test.ts  non_destructive_tools.test.ts  service.test.ts
sre_agent/servers/prompt_server/: Dockerfile  pyproject.toml  server.py
sre_agent/servers/prompt_server/templates/: diagnose.j2
sre_agent/servers/prompt_server/utils/: schemas.py  url_parser.py
sre_agent/servers/slack/: Dockerfile  README.md  index.ts  package-lock.json  package.json
sre_agent/servers/slack/utils/: logger.ts
sre_agent/shared/: __init__.py  pyproject.toml  schemas.py
sre_agent/utils/: auth.py  logger.py
terraform/: .terraform.lock.hcl  README.md  auth.tf  backend.tf  ecr.tf  eks.tf  elb.tf  iam.tf  outputs.tf  providers.tf  terraform.tfvars  terraform.tfvars.example  variables.tf  vpc.tf
tests/security_tests/: test_guardrails.py  test_input_validation.py
tests/unit_tests/: test_adapters.py
tests/unit_tests/client/: test_config_parsing.py
tests/unit_tests/llm/: test_lazy_provider.py
tests/unit_tests/prompt_server/: test_prompt_overrides.py  test_templates.py  test_url_parser.py
